# freenestlib

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  shell.nix
.github/workflows/: ci.yml
experimental/finn/minkowski/: BUILD  minkowski.cc
experimental/finn/svgpp/: BUILD
src/app/: BUILD.bazel  main.cc
tools/: setup.sh  setup_osx.sh
