bazel_dep(name = "boost.polygon", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.mpl", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.config", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.type_traits", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.utility", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.iterator", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.range", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.algorithm", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.format", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.math", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.variant", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.spirit", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.tti", version = "1.83.0.bcr.1")
