module(name = "freenestlib")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

bazel_dep(name = "boost.mpl", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.config", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.type_traits", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.utility", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.iterator", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.range", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.algorithm", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.format", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.math", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.polygon", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.variant", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.spirit", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.tti", version = "1.83.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "abseil-cpp", version = "20250127.1")

svgpp_version = "1.3.1"

http_archive(
    name = "svgpp",
    build_file = "@//third_party:svgpp.BUILD",
    integrity = "sha256-voqJ33LQHPBizJgV3WTJV2tNIJENbXrufw6iZITcXnY=",
    strip_prefix = "svgpp-{0}".format(svgpp_version),
    urls = ["https://github.com/svgpp/svgpp/archive/refs/tags/v{0}.tar.gz".format(svgpp_version)],
)
